# Lilypad

./: .gitignore  Cargo.toml  log.txt
assets/: default_tilemap.json
shaders/: font.frag  font.vert  sprite.frag  sprite.vert  triangle.frag  triangle.vert
src/: app_resources.rs  descriptors.rs  font.rs  main.rs  pipeline_builder.rs  rects.rs  render_frame.rs  renderer.rs  resource_manager.rs  scene.rs  shaders.rs  tile_map.rs  tile_set.rs  tilemap_notes.txt  vulkan_context.rs
