[package]
name = "fond"
version = "0.1.0"
edition = "2021"

[dependencies]

uuid = { version = "1.10.0", features = [
    "fast-rng",
    "v4",
    "macro-diagnostics",
] }
freetype-rs = { version = "*", features = ["bundled"] }
inline-spirv = "0.2.1"
winit = "0.30.5"
glam = { version = "0.29.0", features = ["bytemuck", "mint"] }
fps_counter = "3.0.0"
ash-window = "0.13.0"
png = "0.17.13"
pretty_env_logger = "0.5.0"
load_file = "1.0.1"
log = "0.4.22"
anyhow = "1.0.86"
ash = "0.38.0"
thiserror = "1.0.63"
vk-mem = "0.4.0"
serde_json = "1.0"

[profile.release-with-debug]
inherits = "release"
debug = true
